fix: solve minors mismatches